--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -13,6 +13,13 @@
   display: flex;
   flex-direction: column;
   height: 380px;
+  transition: all linear 0.2s;
+  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.1);
+}
+
+.product-card:hover {
+  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.1);
+  transform: translate3D(0, -1px, 0) scale(1.03);
 }
 
 .product-title {
